Add global collapsable function and fixed animation eyes

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -6,19 +6,19 @@
       <a href="./about.html">
         <p class="eye__text">Sobre mí</p>
       </a>
-      <p class="eye__down js-down">)</p>
+      <p class="eye__down js-toggle">)</p>
     </section>
     <section class="eye js-collapsed">
       <p class="eye__up">(</p>
       <a href="./projects.html">
         <p class="eye__text">Proyectos</p>
       </a>
-      <p class="eye__down js-down">)</p>
+      <p class="eye__down js-toggle">)</p>
     </section>
   </div>
   <span class="nose">></span>
   <section class="mouth-section js-collapsed">
     <p class="mouth__text js-mouth__text">holi</p>
-    <p class="mouth js-mouth">}</p>
+    <p class="mouth js-toggle">}</p>
   </section>
 </main>
