--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -1,5 +1,9 @@
 .page-about {
-  background-image: url("../images/nat-about.png");
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.3),
+      rgba(255, 255, 255, 0.3)
+    ),
+    url("../images/nat-about.png");
   background-color: rgb(253, 250, 250);
   background-size: 100%;
   background-repeat: no-repeat;
