Add subtitle and collapsable contact text

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,24 +1,31 @@
 <main class="page__main">
   <h1 class="main__title">Natalia Migallón</h1>
+  <h2 class="main__title--sub">Frontend developer</h2>
   <div class="eye-wrapper">
     <section class="eye js-collapsed">
       <p class="eye__up">(</p>
-      <a href="./about.html">
+      <!-- <a href="./about.html">
         <p class="eye__text">Sobre mí</p>
-      </a>
+      </a> -->
+      <p class="eye__text">
+        <a class="eye__text--link" href="./about.html">Sobre mí</a>
+      </p>
       <p class="eye__down js-toggle">)</p>
     </section>
     <section class="eye js-collapsed">
       <p class="eye__up">(</p>
-      <a href="./projects.html">
+      <!-- <a href="./projects.html">
         <p class="eye__text">Proyectos</p>
-      </a>
+      </a> -->
+      <p class="eye__text">
+        <a class="eye__text--link" href="./projects.html">Proyectos</a>
+      </p>
       <p class="eye__down js-toggle">)</p>
     </section>
   </div>
   <span class="nose">></span>
   <section class="mouth-section js-collapsed">
-    <p class="mouth__text js-mouth__text">holi</p>
+    <p class="mouth__text js-mouth__text">Contacto</p>
     <p class="mouth js-toggle">}</p>
   </section>
 </main>
