Add contact page

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -26,7 +26,7 @@
         >
       </li>
       <li>
-        <a class="header__nav--contact" href="#contact" title="Contacto"
+        <a class="header__nav--contact" href="./contact.html" title="Contacto"
           >Contacto</a
         >
       </li>
