--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -25,7 +25,7 @@
   </div>
   <span class="nose">></span>
   <section class="mouth-section js-collapsed">
-    <p class="mouth__text js-mouth__text">Contacto</p>
+    <p class="mouth__text js-mouth__text"><a class="mouth__text--link" href="./contact.html">Contacto</a></p>
     <p class="mouth js-toggle">}</p>
   </section>
 </main>
