Add menu hambuger background and footer without icons

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,5 +1,5 @@
 <footer id="contact" class="footer">
-  <span class="footer__contact">Contacto</span>
+  <!-- <span class="footer__contact">Contacto</span>
   <span class="footer__wrapper">
     <a
       href="https://www.linkedin.com/in/nataliamigallon/"
@@ -19,6 +19,6 @@
       class="icons icon__email"
       ><i class="fas fa-envelope"></i
     ></a>
-  </span>
+  </span> -->
   <small class="footer__copy"> &copy; Natalia Migallón 2021</small>
 </footer>
