--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -54,7 +54,7 @@
 }
 .page-about .footer {
   background-color: rgb(21, 218, 208);
-  opacity: 0.68;
+  //opacity: 0.68;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -85,7 +85,38 @@
 }
 .page-projects .footer {
   background-color: rgb(21, 218, 208);
-  opacity: 0.68;
+  //opacity: 0.68;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding: 20px;
+  &__contact {
+    font-family: "Kiwi Maru", serif;
+    font-size: 20px;
+    color: white;
+  }
+  &__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    .icons {
+      font-size: 30px;
+      color: white;
+      padding: 10px 17px;
+    }
+  }
+  &__copy {
+    font-family: "Kiwi Maru", serif;
+    font-size: 13px;
+    color: white;
+  }
+}
+.page-contact .footer {
+  background-color: rgb(21, 218, 208);
+  //opacity: 0.68;
   display: flex;
   flex-direction: column;
   justify-content: center;
