--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -106,10 +106,7 @@
   transform: translate3d(0px, -180%, 0px);
   z-index: 1001;
   background-color: white;
-  //background-image: radial-gradient(ellipse closest-side, white, transparent);
-  //background-image: linear-gradient(white 70%, transparent);
-  //background-color: white;
-  opacity: 0.8;
+  //opacity: 0.8;
   width: 180px;
   height: 218px;
   padding: 5px 0 0 10px;
@@ -117,40 +114,54 @@
   border: solid 2px rgb(180, 180, 180);
   margin-top: 20px;
 }
-
+// .page-about.header__nav {
+//   position: absolute;
+//   top: 60px;
+//   left: 20px;
+//   transform: translate3d(0px, -180%, 0px);
+//   z-index: 1001;
+//   background-color: white;
+//   opacity: 0.8;
+//   width: 180px;
+//   height: 218px;
+//   padding: 5px 0 0 10px;
+//   border-radius: 5px;
+//   border: solid 2px rgb(180, 180, 180);
+//   margin-top: 20px;
+// }
+// .page-projects.header__nav {
+//   position: absolute;
+//   top: 60px;
+//   left: 20px;
+//   transform: translate3d(0px, -180%, 0px);
+//   z-index: 1001;
+//   background-color: white;
+//   //opacity: 0.8;
+//   width: 180px;
+//   height: 218px;
+//   padding: 5px 0 0 10px;
+//   border-radius: 5px;
+//   border: solid 2px rgb(180, 180, 180);
+//   margin-top: 20px;
+// }
+// .page-contact.header__nav {
+//   position: absolute;
+//   top: 60px;
+//   left: 20px;
+//   transform: translate3d(0px, -180%, 0px);
+//   z-index: 1001;
+//   background-color: white;
+//   //opacity: 0.8;
+//   width: 180px;
+//   height: 218px;
+//   padding: 5px 0 0 10px;
+//   border-radius: 5px;
+//   border: solid 2px rgb(180, 180, 180);
+//   margin-top: 20px;
+// }
 .header__nav ul li a {
   font-family: "Kiwi Maru", serif;
   font-size: 25px;
   color: rgb(226, 175, 128);
   line-height: 50px;
-  // animation-name: showMenuText;
-  // animation-duration: 2s;
-  // animation-iteration-count: 2s;
-  // animation-timing-function: linear;
-  // @keyframes showMenuText {
-  //   0% {
-  //     color: rgb(226, 175, 128);
-  //     opacity: 0;
-  //   }
-  //   15% {
-  //     color: rgb(226, 175, 128);
-  //     opacity: 0.15;
-  //   }
-  //   25% {
-  //     color: rgb(226, 175, 128);
-  //     opacity: 0.3;
-  //   }
-  //   50% {
-  //     color: rgb(226, 175, 128);
-  //     opacity: 0.5;
-  //   }
-  //   75% {
-  //     color: rgb(226, 175, 128);
-  //     opacity: 0.85;
-  //   }
-  //   100% {
-  //     color: rgb(226, 175, 128);
-  //     opacity: 1;
-  //   }
-  // }
 }
