--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -57,10 +57,6 @@
         font-size: 160px;
       }
     }
-    // &__down:active {
-    //   font-size: 97px;
-    //   -webkit-transform: rotate(90deg);
-    // }
     &__up {
       position: absolute;
       top: -60px;
@@ -188,6 +184,35 @@
           }
         }
       }
+      .mouth {
+        animation-name: borderEyes;
+        animation-duration: 4s;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+        @keyframes borderEyes {
+          0% {
+            -webkit-text-stroke: 2px rgb(255, 255, 255);
+          }
+          15% {
+            -webkit-text-stroke: 2px rgb(174, 240, 236);
+          }
+          25% {
+            -webkit-text-stroke: 2px rgb(128, 226, 221);
+          }
+          50% {
+            -webkit-text-stroke: 2px rgb(21, 218, 208);
+          }
+          75% {
+            -webkit-text-stroke: 2px rgb(128, 226, 221);
+          }
+          88% {
+            -webkit-text-stroke: 2px rgb(174, 240, 236);
+          }
+          100% {
+            -webkit-text-stroke: 2px rgb(255, 255, 255);
+          }
+        }
+      }
     }
   }
 }
@@ -212,94 +237,95 @@
     font-size: 70px;
   }
 }
-
-.mouth {
-  position: relative;
-  text-align: center;
-  font-size: 100px;
-  color: white;
-  top: 20px;
-  -webkit-transform: rotate(90deg);
-  -moz-transform: rotate(90deg);
-  display: inline-block;
-  cursor: pointer;
-  @media all and (min-width: 768px) {
-    font-size: 200px;
-    margin-left: 7px;
-  }
-  @media all and (min-width: 1200px) {
-    font-size: 180px;
-    margin-left: 10px;
-  }
-  &__text {
-    font-family: "Kiwi Maru", serif;
-    font-size: 15px;
-    color: white;
-    text-transform: uppercase;
-    position: absolute;
+.mouth-section {
+  .mouth {
+    position: relative;
     text-align: center;
-    width: 100%;
-    right: 9px;
-    animation-name: showText;
-    animation-duration: 2s;
-    animation-iteration-count: 2s;
-    animation-timing-function: linear;
-    @keyframes showText {
-      0% {
-        color: white;
-        opacity: 0;
-      }
-      15% {
-        color: white;
-        opacity: 0.15;
-      }
-      25% {
-        color: white;
-        opacity: 0.3;
-      }
-      50% {
-        color: white;
-        opacity: 0.5;
-      }
-      75% {
-        color: white;
-        opacity: 0.85;
-      }
-      100% {
-        color: white;
-        opacity: 1;
+    font-size: 100px;
+    color: white;
+    top: 20px;
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    display: inline-block;
+    cursor: pointer;
+    @media all and (min-width: 768px) {
+      font-size: 200px;
+      margin-left: 7px;
+    }
+    @media all and (min-width: 1200px) {
+      font-size: 180px;
+      margin-left: 10px;
+    }
+    &__text {
+      font-family: "Kiwi Maru", serif;
+      font-size: 15px;
+      color: white;
+      text-transform: uppercase;
+      position: absolute;
+      text-align: center;
+      width: 100%;
+      right: 9px;
+      animation-name: showText;
+      animation-duration: 2s;
+      animation-iteration-count: 2s;
+      animation-timing-function: linear;
+      @keyframes showText {
+        0% {
+          color: white;
+          opacity: 0;
+        }
+        15% {
+          color: white;
+          opacity: 0.15;
+        }
+        25% {
+          color: white;
+          opacity: 0.3;
+        }
+        50% {
+          color: white;
+          opacity: 0.5;
+        }
+        75% {
+          color: white;
+          opacity: 0.85;
+        }
+        100% {
+          color: white;
+          opacity: 1;
+        }
       }
     }
   }
-  // &.js-collapsed {
-  //   .mouth {
-  //     animation-name: borderEyes;
-  //     animation-duration: 4s;
-  //     animation-iteration-count: infinite;
-  //     animation-timing-function: linear;
-  //     @keyframes borderEyes {
-  //       0% {
-  //         -webkit-text-stroke: 2px rgb(255, 255, 255);
-  //       }
-  //       15% {
-  //         -webkit-text-stroke: 2px rgb(233, 210, 190);
-  //       }
-  //       25% {
-  //         -webkit-text-stroke: 2px rgb(230, 192, 157);
-  //       }
-  //       50% {
-  //         -webkit-text-stroke: 2px rgb(226, 175, 128);
-  //       }
-  //       75% {
-  //         -webkit-text-stroke: 2px rgb(230, 192, 157);
-  //       }
-  //       88% {
-  //         -webkit-text-stroke: 2px rgb(233, 210, 190);
-  //       }
-  //       100% {
-  //         -webkit-text-stroke: 2px rgb(255, 255, 255);
-  //       }
-  //     }
-  //   }
-  // }
+  &.js-collapsed {
+    .mouth {
+      animation-name: borderEyes;
+      animation-duration: 4s;
+      animation-iteration-count: infinite;
+      animation-timing-function: linear;
+      @keyframes borderEyes {
+        0% {
+          -webkit-text-stroke: 2px rgb(255, 255, 255);
+        }
+        15% {
+          -webkit-text-stroke: 2px rgb(174, 240, 236);
+        }
+        25% {
+          -webkit-text-stroke: 2px rgb(128, 226, 221);
+        }
+        50% {
+          -webkit-text-stroke: 2px rgb(21, 218, 208);
+        }
+        75% {
+          -webkit-text-stroke: 2px rgb(128, 226, 221);
+        }
+        88% {
+          -webkit-text-stroke: 2px rgb(174, 240, 236);
+        }
+        100% {
+          -webkit-text-stroke: 2px rgb(255, 255, 255);
+        }
+      }
+    }
+  }
 }
