--- a/src/scss/pages/_contact.scss
+++ b/src/scss/pages/_contact.scss
@@ -23,6 +23,7 @@
     justify-content: flex-start;
     align-items: center;
     padding: 0 0 0 20px;
+    margin-top: -20px;
     &--h1 {
       font-family: "Kiwi Maru", serif;
       font-size: 40px;
@@ -34,7 +35,7 @@
       font-family: "Kiwi Maru", serif;
       font-size: 40px;
       font-weight: 800;
-      color: rgb(255, 255, 255);
+      color: white;
       -webkit-transform: rotate(90deg);
       padding: 0 7px 7px 0;
     }
@@ -55,6 +56,10 @@
     padding: 8px 10px 8px 10px;
     margin: 6px 20px 10px 20px;
   }
+  &__input::placeholder {
+    font-family: "Open Sans", sans-serif;
+    color: rgb(100, 100, 100);
+  }
   &__textarea {
     width: 300px;
     display: block;
@@ -62,6 +67,10 @@
     border-radius: 3px;
     padding: 5px 10px 5px 10px;
     margin: 8px 20px 10px 20px;
+  }
+  &__textarea::placeholder {
+    font-family: "Open Sans", sans-serif;
+    color: rgb(100, 100, 100);
   }
   &__btn {
     width: 140px;
@@ -74,10 +83,10 @@
     font-family: "Open Sans", sans-serif;
     font-size: 17px;
     font-weight: 600;
-    letter-spacing: inherit;
+    letter-spacing: 2px;
     color: rgb(255, 255, 255);
     padding: 0 0 3px 0;
-    margin: 8px 20px 10px 20px;
+    margin: 8px 20px 25px 20px;
     cursor: pointer;
   }
 }
@@ -87,10 +96,10 @@
   flex-direction: row;
   //justify-content: center;
   align-items: center;
-  color: white;
-  margin-left: 14px;
+  margin: 0 0 20px 14px;
+  //margin-left: 14px;
   .icons {
-    font-size: 25px;
+    font-size: 30px;
     color: white;
     padding: 10px 8px;
   }
