Add about me text

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -4,9 +4,6 @@
   <div class="eye-wrapper">
     <section class="eye js-collapsed">
       <p class="eye__up">(</p>
-      <!-- <a href="./about.html">
-        <p class="eye__text">Sobre mí</p>
-      </a> -->
       <p class="eye__text">
         <a class="eye__text--link" href="./about.html">Sobre mí</a>
       </p>
@@ -14,9 +11,6 @@
     </section>
     <section class="eye js-collapsed">
       <p class="eye__up">(</p>
-      <!-- <a href="./projects.html">
-        <p class="eye__text">Proyectos</p>
-      </a> -->
       <p class="eye__text">
         <a class="eye__text--link" href="./projects.html">Proyectos</a>
       </p>
@@ -25,7 +19,9 @@
   </div>
   <span class="nose">></span>
   <section class="mouth-section js-collapsed">
-    <p class="mouth__text js-mouth__text"><a class="mouth__text--link" href="./contact.html">Contacto</a></p>
+    <p class="mouth__text js-mouth__text">
+      <a class="mouth__text--link" href="./contact.html">Contacto</a>
+    </p>
     <p class="mouth js-toggle">}</p>
   </section>
 </main>
