--- a/src/scss/pages/_contact.scss
+++ b/src/scss/pages/_contact.scss
@@ -88,6 +88,9 @@
     padding: 0 0 3px 0;
     margin: 8px 20px 25px 20px;
     cursor: pointer;
+    &:hover {
+      transform: scale(1.07);
+    }
   }
 }
 
