--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -155,6 +155,7 @@
       @media all and (min-width: 768px) {
         right: 60px;
         font-size: 30px;
+        width: 100%;
       }
       @media all and (min-width: 1200px) {
         right: 32px;
