--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -9,12 +9,12 @@
   background-repeat: no-repeat;
   @media all and (min-width: 768px) {
     background-image: linear-gradient(
-        rgba(255, 255, 255, 0.3),
-        rgba(255, 255, 255, 0.3)
+        rgba(255, 255, 255, 0.4),
+        rgba(255, 255, 255, 0.4)
       ),
       url("../images/nat-about-max.png");
     background-color: rgb(253, 250, 250);
-    background-size: 50%;
+    background-size: 60%;
   }
   @media all and (min-width: 1200px) {
     padding-top: 300px;
@@ -28,7 +28,7 @@
   border-image: linear-gradient(to bottom, rgb(21, 218, 208), rgba(0, 0, 0, 0))
     1 100%;
   @media all and (min-width: 768px) {
-    margin: 600px 80px 80px 80px;
+    margin: 650px 80px 80px 80px;
     border-width: 5px;
   }
   @media all and (min-width: 1200px) {
@@ -55,7 +55,7 @@
       text-transform: lowercase;
       padding: 0 5px 19px 0;
       @media all and (min-width: 768px) {
-        font-size: 60px;
+        font-size: 52px;
       }
       @media all and (min-width: 1200px) {
         padding-top: 300px;
@@ -69,7 +69,7 @@
       -webkit-transform: rotate(90deg);
       padding: 0 7px 7px 0;
       @media all and (min-width: 768px) {
-        font-size: 60px;
+        font-size: 52px;
       }
       @media all and (min-width: 1200px) {
         padding-top: 300px;
@@ -89,14 +89,14 @@
     letter-spacing: 2px;
     color: rgb(255, 255, 255);
     padding: 0 0 3px 0;
-    margin: 0 25px 18px 30px;
+    margin: 0 25px 18px 13px;
     cursor: pointer;
     &:hover {
       transform: scale(1.07);
     }
     @media all and (min-width: 768px) {
-      width: 250px;
-      height: 58px;
+      width: 210px;
+      height: 50px;
       font-size: 25px;
     }
     @media all and (min-width: 1200px) {
@@ -107,15 +107,16 @@
     font-family: "Open Sans", sans-serif;
     font-size: 20px;
     color: grey;
-    padding: 0 25px 0 30px;
+    padding: 0 25px 0 13px;
     line-height: 30px;
     &--adaLink {
       color: rgb(21, 218, 208);
       font-weight: 600;
     }
     @media all and (min-width: 768px) {
-      font-size: 32px;
-      line-height: 55px;
+      font-size: 25px;
+      line-height: 40px;
+      text-align: justify;
     }
     @media all and (min-width: 1200px) {
       padding-top: 300px;
