--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -2,16 +2,16 @@
   background-color: transparent;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   text-align: center;
   color: white;
   padding: 12px;
+  height: 20%;
   @media all and (min-width: 768px) {
-    margin-top: 250px;
     padding: 22px;
   }
   @media all and (min-width: 1200px) {
-    font-size: 70px;
+    // font-size: 70px;
   }
   &__contact {
     font-family: "Kiwi Maru", serif;
@@ -37,7 +37,7 @@
         padding: 0 17px 10px 17px;
       }
       @media all and (min-width: 1200px) {
-        font-size: 70px;
+        //font-size: 70px;
       }
     }
   }
@@ -49,7 +49,7 @@
       font-size: 20px;
     }
     @media all and (min-width: 1200px) {
-      font-size: 70px;
+      //font-size: 70px;
     }
   }
 }
