--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -4,17 +4,19 @@
   background-image: linear-gradient(rgb(21, 218, 208), rgb(226, 175, 128) 60%);
   background-repeat: no-repeat;
   width: 100vw;
-  height: 100%;
-  min-height: 100vh;
+  height: 100vh;
+  // height: 100%;
+  // min-height: 100vh;
 }
 .page__main {
   text-align: center;
   padding-top: 120px;
+  height: 80%;
   @media all and (min-width: 768px) {
-    padding-top: 300px;
+    padding-top: 170px;
   }
   @media all and (min-width: 1200px) {
-    padding-top: 300px;
+    padding-top: 100px;
   }
 }
 .main__title {
@@ -23,10 +25,10 @@
   font-weight: 500;
   color: white;
   @media all and (min-width: 768px) {
-    font-size: 70px;
+    font-size: 50px;
   }
   @media all and (min-width: 1200px) {
-    padding-top: 300px;
+    font-size: 43px;
   }
   &--sub {
     font-family: "Kiwi Maru", serif;
@@ -34,12 +36,13 @@
     font-weight: 500;
     color: rgb(153, 151, 149);
     padding-bottom: 50px;
+    text-transform: lowercase;
     @media all and (min-width: 768px) {
-      font-size: 58px;
+      font-size: 38px;
       margin-bottom: 70px;
     }
     @media all and (min-width: 1200px) {
-      padding-top: 300px;
+      font-size: 35px;
     }
   }
 }
@@ -48,6 +51,15 @@
   flex-direction: row;
   justify-content: space-evenly;
   text-align: center;
+  @media all and (min-width: 768px) {
+    // font-size: 150px;
+  }
+  @media all and (min-width: 1200px) {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
   .eye {
     position: relative;
     text-align: center;
@@ -58,10 +70,11 @@
       -moz-transform: rotate(90deg);
       cursor: pointer;
       @media all and (min-width: 768px) {
-        font-size: 200px;
+        font-size: 150px;
       }
       @media all and (min-width: 1200px) {
-        font-size: 160px;
+        font-size: 110px;
+        margin: 0 90px 0 90px;
       }
     }
     &__up {
@@ -103,12 +116,12 @@
         }
       }
       @media all and (min-width: 768px) {
-        top: -142px;
-        font-size: 200px;
+        top: -100px;
+        font-size: 150px;
       }
       @media all and (min-width: 1200px) {
-        top: -122px;
-        font-size: 160px;
+        font-size: 110px;
+        margin: 0 90px 0 90px;
       }
     }
     &__text {
@@ -154,12 +167,21 @@
       }
       @media all and (min-width: 768px) {
         right: 60px;
-        font-size: 30px;
+        font-size: 20px;
         width: 100%;
       }
       @media all and (min-width: 1200px) {
-        right: 32px;
-        font-size: 30px;
+        font-size: 18px;
+        top: 0;
+      }
+      &--link {
+        text-align: center;
+        @media all and (min-width: 768px) {
+          margin: 0 0 5px 6px;
+        }
+        @media all and (min-width: 1200px) {
+          margin: 0 -7px 5px 90px;
+        }
       }
     }
     &.js-collapsed {
@@ -239,10 +261,11 @@
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
   @media all and (min-width: 768px) {
-    font-size: 80px;
+    font-size: 50px;
   }
   @media all and (min-width: 1200px) {
-    font-size: 70px;
+    font-size: 50px;
+    margin-bottom: 35px;
   }
 }
 .mouth-section {
@@ -257,12 +280,11 @@
     display: inline-block;
     cursor: pointer;
     @media all and (min-width: 768px) {
-      font-size: 200px;
+      font-size: 150px;
       margin-left: 7px;
     }
     @media all and (min-width: 1200px) {
-      font-size: 180px;
-      margin-left: 10px;
+      font-size: 110px;
     }
     &__text {
       font-family: "Kiwi Maru", serif;
@@ -305,10 +327,10 @@
         }
       }
       @media all and (min-width: 768px) {
-        font-size: 30px;
+        font-size: 20px;
       }
       @media all and (min-width: 1200px) {
-        padding-top: 300px;
+        top: 0;
       }
     }
   }
