--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -89,7 +89,7 @@
     letter-spacing: 2px;
     color: rgb(255, 255, 255);
     padding: 0 0 3px 0;
-    margin: 0 25px 18px 13px;
+    margin: 0 25px 18px 15px;
     cursor: pointer;
     &:hover {
       transform: scale(1.07);
@@ -98,6 +98,7 @@
       width: 210px;
       height: 50px;
       font-size: 25px;
+      margin: 0 0 0 30px;
     }
     @media all and (min-width: 1200px) {
       padding-top: 300px;
@@ -117,6 +118,7 @@
       font-size: 25px;
       line-height: 40px;
       text-align: justify;
+      padding: 0 0 0 30px;
     }
     @media all and (min-width: 1200px) {
       padding-top: 300px;
